kubernetes/core-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: busybox-pod
  labels:
    app: busybox
spec:
  containers:
  - name: busybox-container
    image: busybox
    args:
    - /bin/sh
    - -c
    - touch tmp/healthy; sleep infinity;
    ports:
     - containerPort: 80
    readinessProbe:
      exec:
        command:
        - cat
        - tmp/healthy
      initialDelaySeconds: 15
      periodSeconds: 10
    livenessProbe:
      exec:
        command:
        - cat
        - tmp/healthy
      initialDelaySeconds: 20
      periodSeconds: 10
