kubernetes/core-svc.yml
---
apiVersion: v1
kind: Service
metadata:
  name: core-app-svc
  labels:
    app: core-app
spec:
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
  selector:
    app: core-app
