kubernetes/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: core-ingress
spec:
  rules:
    - host: core.happybank.io
      http:
        paths:
          - backend:
              service:
                name: core-app-svc
                port:
                  number: 5000
            path: /health
            pathType: Prefix
